--- a/zsolt.html
+++ b/zsolt.html
@@ -7,6 +7,9 @@
     <title>Ginál Zsolt</title>
 </head>
 <body>
-    
+    <h1>Rólam</h1>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde tenetur praesentium alias odio, repellendus dignissimos quos beatae labore sunt nulla, autem vel a aut in tempora eaque explicabo modi!</p>
+    </div>
 </body>
 </html>
