--- a/zsolt.html
+++ b/zsolt.html
@@ -11,5 +11,15 @@
     <div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde tenetur praesentium alias odio, repellendus dignissimos quos beatae labore sunt nulla, autem vel a aut in tempora eaque explicabo modi!</p>
     </div>
+    <h2>Elérhetőségeim</h2>
+    <ul>
+        <li>
+            <p>Github: <a href="https://github.com/GinalZsolt">GinalZsolt</a></p> 
+            <img src="kepek/git.png" alt="Github" title="Github">
+        </li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
 </body>
 </html>
