--- a/index.html
+++ b/index.html
@@ -5,30 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="index_css.css">
+    <link rel="stylesheet" href="index.css">
     <title>Bemutatkozó oldal</title>
 </head>
 <body>
     <div class="container">
         <h1 class="mx-auto">A csapat</h1>
         <div class="row">
-            <div class="col-4">
-                <a href="balazs.html"><img src="img/index/zick.png" class="rounded mx-auto" alt=""></a>
+            <div class="col-md-4">
+                <a href="https://github.com/zickbalazs"><img src="img/index/zick.png" class="rounded-circle border border-primary mx-auto img-fluid" alt=""></a>
                 <h3>Zick Balázs</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quod dignissimos consequuntur nisi sint, quasi a numquam ipsa nam tempore, inventore repellat architecto quis unde doloremque debitis! Explicabo, facilis officia.</p>
+                <p><a href="balazs.html">Weboldal</a></p>
 
             </div>
-            <div class="col-4">
-                <a href="david.html"><img src="img/index/kocsis.png" class="rounded mx-auto" alt=""></a>
+            <div class="col-md-4">
+                <a href="https://github.com/DavidKocsis0204"><img src="img/index/kocsis.png" class="rounded-circle border border-primary mx-auto img-fluid" alt=""></a>
                 <h3>Kocsis Dávid</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quod dignissimos consequuntur nisi sint, quasi a numquam ipsa nam tempore, inventore repellat architecto quis unde doloremque debitis! Explicabo, facilis officia.</p>
-
+                <p><a href="david.html">Weboldal</a></p>
             </div>
-            <div class="col-4">
-                <a href="zsolt.html"><img src="img/index/zsolt.png" class="rounded mx-auto" alt=""></a>
+            <div class="col-md-4">
+                <a href="https://github.com/GinalZsolt"><img src="img/index/zsolt.png" class="rounded-circle border border-primary mx-auto img-fluid" alt=""></a>
                 <h3>Ginál Zsolt</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quod dignissimos consequuntur nisi sint, quasi a numquam ipsa nam tempore, inventore repellat architecto quis unde doloremque debitis! Explicabo, facilis officia.</p>
-
+                <p><a href="zsolt.html">Weboldal</a></p>
             </div>
         </div>
     </div>    
