--- a/david.html
+++ b/david.html
@@ -5,18 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="david.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Kocsis David</title>
 </head>
 <body>
     <hr><p>See also</p></hr>
-    <ul>
-        <li><a href="index.html">Index oldal</a></li>
-        <li><a href="zsolt.html">Ginál zsolt</a></li>
-        <li><a href="balazs.html">Zick Balázs</a></li>
-    </ul>
-    
+    <div id="felsorolas">
+        <ul>
+            <li><a href="index.html">Index oldal</a></li>
+            <li><a href="zsolt.html">Ginál zsolt</a></li>
+            <li><a href="balazs.html">Zick Balázs</a></li>
+        </ul>
+    </div>
+
     <h1>Rólam</h1>
     <h2>Lorem ipsum</h2>
+    <img src="impala.jpg" alt="impala" class="float-right">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fringilla orci turpis, id sodales risus blandit id. Quisque aliquam rutrum mattis. Donec posuere dolor arcu, non pharetra neque ultricies vel. Donec dapibus, libero ut feugiat porta, libero nisl ullamcorper ipsum, et elementum dui massa eu lectus. Integer in turpis non velit tempus interdum ut quis augue. Quisque vestibulum tincidunt justo vitae sodales. Fusce nec dictum dolor, ut molestie tellus. Vivamus eget massa sollicitudin, volutpat orci condimentum, dictum quam. Fusce ac aliquam eros, eu facilisis diam. Ut sed tincidunt felis. </p>
     <p>Duis varius dictum turpis, vel fringilla felis congue et. Nulla suscipit bibendum gravida. Sed ut diam eget mauris vehicula tincidunt. Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi sodales urna vitae ultrices gravida. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed facilisis odio mi, sed tristique ante semper eu. Sed malesuada, nisi ut blandit bibendum, nibh nisi mollis magna, vel faucibus diam augue et leo. Maecenas mollis vehicula erat, ut sollicitudin nisl viverra nec. Duis pulvinar ante felis, at semper ipsum egestas at. Cras blandit ex in justo volutpat mattis. Aenean in dolor dictum dui fermentum sodales sit amet id orci. Suspendisse sem ipsum, sollicitudin quis faucibus in, convallis sodales erat. </p>
     
