--- a/zsolt.html
+++ b/zsolt.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="zsolt.css">
     <title>Ginál Zsolt</title>
 </head>
 <body>
@@ -12,14 +14,17 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde tenetur praesentium alias odio, repellendus dignissimos quos beatae labore sunt nulla, autem vel a aut in tempora eaque explicabo modi!</p>
     </div>
     <h2>Elérhetőségeim</h2>
-    <ul>
-        <li>
-            <p>Github: <a href="https://github.com/GinalZsolt">GinalZsolt</a></p> 
-            <img src="kepek/git.png" alt="Github" title="Github">
-        </li>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ul>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-6 kepek"><a href="https://github.com/GinalZsolt"><img class="img-fluid" src="img/zsolt/git.png" alt="Github" title="Github"></a></div>
+            <div class="col-6 kepek"><a href="https://reddit.com/u/GiZsolt"><img class="img-fluid" src="img/zsolt/reddit.jpg" alt="Reddit" title="Reddit"></a></div>
+        </div>
+        <div class="row">
+            <div class="col-6 kepek"></div>
+            <div class="col-6 kepek"></div>
+        </div>
+    </div>
+        <p><a href="index.html" >Vissza</a></p>
 </body>
 </html>
