Még jobb index.html

--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
 <body>
     <div class="container">
         <h1 class="mx-auto">A csapat</h1>
-        <div class="row">
-            <div class="col-md-4">
+        <div class="row mx-auto">
+            <div class="col-md-4 bg-light">
                 <a href="https://github.com/zickbalazs"><img src="img/index/zick.png" class="rounded-circle border border-primary mx-auto img-fluid" alt=""></a>
                 <h3>Zick Balázs</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quod dignissimos consequuntur nisi sint, quasi a numquam ipsa nam tempore, inventore repellat architecto quis unde doloremque debitis! Explicabo, facilis officia.</p>
-                <p><a href="balazs.html">Weboldal</a></p>
+                <p><a href="balazs.html" class="center">Weboldal</a></p>
 
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 bg-light">
                 <a href="https://github.com/DavidKocsis0204"><img src="img/index/kocsis.png" class="rounded-circle border border-primary mx-auto img-fluid" alt=""></a>
                 <h3>Kocsis Dávid</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quod dignissimos consequuntur nisi sint, quasi a numquam ipsa nam tempore, inventore repellat architecto quis unde doloremque debitis! Explicabo, facilis officia.</p>
-                <p><a href="david.html">Weboldal</a></p>
+                <p><a href="david.html" class="center">Weboldal</a></p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 bg-light">
                 <a href="https://github.com/GinalZsolt"><img src="img/index/zsolt.png" class="rounded-circle border border-primary mx-auto img-fluid" alt=""></a>
                 <h3>Ginál Zsolt</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quod dignissimos consequuntur nisi sint, quasi a numquam ipsa nam tempore, inventore repellat architecto quis unde doloremque debitis! Explicabo, facilis officia.</p>
-                <p><a href="zsolt.html">Weboldal</a></p>
+                <p><a href="zsolt.html" class="center">Weboldal</a></p>
             </div>
         </div>
     </div>    
