--- a/david.html
+++ b/david.html
@@ -24,7 +24,7 @@
     <p>Duis varius dictum turpis, vel fringilla felis congue et. Nulla suscipit bibendum gravida. Sed ut diam eget mauris vehicula tincidunt. Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi sodales urna vitae ultrices gravida. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed facilisis odio mi, sed tristique ante semper eu. Sed malesuada, nisi ut blandit bibendum, nibh nisi mollis magna, vel faucibus diam augue et leo. Maecenas mollis vehicula erat, ut sollicitudin nisl viverra nec. Duis pulvinar ante felis, at semper ipsum egestas at. Cras blandit ex in justo volutpat mattis. Aenean in dolor dictum dui fermentum sodales sit amet id orci. Suspendisse sem ipsum, sollicitudin quis faucibus in, convallis sodales erat. </p>
     
     <h2>Elérhetőségek</h2>
-    <a href="https://github.com/DavidKocsis0204" target="_blank">github <img src="img/index/kocsis.png" alt="github profilkép" id="kep"></a>
+    <a href="https://github.com/DavidKocsis0204" target="_blank">github <img src="img/index/kocsis.png" alt="github profilkép" id="kep" class="rounded-circle border-primary"></a>
     
 </body>
 </html>
