--- a/balazs.html
+++ b/balazs.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="balazs.css">
+    <title>Bemutatkozó oldal - Zick Balázs</title>
 </head>
 <body>
-    
+<div class="container">
+    <div class="row">
+        <h1>Zick Balázs</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quas sequi voluptatibus cum ipsum nihil asperiores tempore, error esse minus placeat consequuntur dolorum eum vitae voluptatem ratione harum corporis? Quo!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quas sequi voluptatibus cum ipsum nihil asperiores tempore, error esse minus placeat consequuntur dolorum eum vitae voluptatem ratione harum corporis? Quo!</p>
+    </div>
+    <div class="row">
+        <h3>Elérhetőségek</h3>
+    </div>
+    <div class="row mx-auto">
+        <div class="col-lg-4"><a href=""><img src="img/balazs/discord.png" alt="" id="kepek" class="img-fluid"></a></div>
+        <div class="col-lg-4"><a href=""><img src="img/balazs/spotify.png" alt="" id="kepek" class="img-fluid"></a></div>
+        <div class="col-lg-4"><a href=""><img src="/img/balazs/steam.png" alt="" id="kepek" class="img-fluid"></a></div>
+    </div>
+</div>    
 </body>
 </html>
