--- a/zsolt.html
+++ b/zsolt.html
@@ -12,17 +12,19 @@
     <h1>Rólam</h1>
     <div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde tenetur praesentium alias odio, repellendus dignissimos quos beatae labore sunt nulla, autem vel a aut in tempora eaque explicabo modi!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde tenetur praesentium alias odio, repellendus dignissimos quos beatae labore sunt nulla, autem vel a aut in tempora eaque explicabo modi!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde tenetur praesentium alias odio, repellendus dignissimos quos beatae labore sunt nulla, autem vel a aut in tempora eaque explicabo modi!</p>
     </div>
     <h2>Elérhetőségeim</h2>
 
     <div class="container">
         <div class="row mx-auto">
-            <div class="col-6 kepek"><a href="https://github.com/GinalZsolt"><img class="img-fluid" src="img/zsolt/git.png" alt="Github" title="Github"><br><p class="elerhetosegek">GinalZsolt</p></a></div>
-            <div class="col-6 kepek"><a href="https://reddit.com/u/GiZsolt"><img class="img-fluid" src="img/zsolt/reddit.jpg" alt="Reddit" title="Reddit"><br><p class="elerhetosegek">GiZsolt</p></a></div>
+            <div class="col-6 kepek rounded"><a href="https://github.com/GinalZsolt"><img class="img-fluid" src="img/zsolt/github.png" alt="Github" title="Github"><br><p class="elerhetosegek">GinalZsolt</p></a></div>
+            <div class="col-6 kepek rounded"><a href="https://reddit.com/u/GiZsolt"><img class="img-fluid" src="img/zsolt/reddit.jpg" alt="Reddit" title="Reddit"><br><p class="elerhetosegek">GiZsolt</p></a></div>
         </div>
         <div class="row mx-auto">
-            <div class="col-6 kepek"><a href="https://steamcommunity.com/profiles/76561198142198436"><img class="img-fluid" src="img/zsolt/steam.jpg" alt="Steam" title="Steam"><br><p class="elerhetosegek">GiZsolt</p></a></div>
-            <div class="col-6 kepek"><a href="https://open.spotify.com/user/y9elxiw7uvqaofdsy1rv4r962"><img class="img-fluid" src="img/zsolt/spotify.png" alt="Spotify" title="Spotify"><br><p class="elerhetosegek">Zsolt</p></a></div>
+            <div class="col-6 kepek rounded"><a href="https://steamcommunity.com/profiles/76561198142198436"><img class="img-fluid" src="img/zsolt/steam.jpg" alt="Steam" title="Steam"><br><p class="elerhetosegek">GiZsolt</p></a></div>
+            <div class="col-6 kepek rounded"><a href="https://open.spotify.com/user/y9elxiw7uvqaofdsy1rv4r962"><img class="img-fluid" src="img/zsolt/spotify.png" alt="Spotify" title="Spotify"><br><p class="elerhetosegek">Zsolt</p></a></div>
         </div>
     </div>
         <p><a href="index.html" >Vissza</a></p>
