--- a/balazs.html
+++ b/balazs.html
@@ -18,11 +18,12 @@
     <div class="row">
         <h3>Elérhetőségek</h3>
     </div>
-    <div class="row mx-auto">
-        <div class="col-lg-4"><a href=""><img src="img/balazs/discord.png" alt="" id="kepek" class="img-fluid"></a></div>
-        <div class="col-lg-4"><a href=""><img src="img/balazs/spotify.png" alt="" id="kepek" class="img-fluid"></a></div>
-        <div class="col-lg-4"><a href=""><img src="/img/balazs/steam.png" alt="" id="kepek" class="img-fluid"></a></div>
+    <div class="row">
+        <div class="col-4"><a href="" target="_blank"><img src="img/balazs/discord.png" alt="" id="kepek" class="img-fluid"></a></div>
+        <div class="col-4"><a href="https://open.spotify.com/user/o5h49xxl76sel74a5rw8s4sgo" target="_blank"><img src="img/balazs/spotify.png" alt="" id="kepek" class="img-fluid"></a></div>
+        <div class="col-4"><a href="https://steamcommunity.com/id/Zickyboii" target="_blank"><img src="img/balazs/steam.png" alt="" id="kepek" class="img-fluid"></a></div>
     </div>
 </div>    
+<p class="text-center" id="vissza"><a href="index.html" class="text-center" >Vissza az indexre</a></p>
 </body>
 </html>
