--- a/zsolt.html
+++ b/zsolt.html
@@ -27,6 +27,6 @@
             <div class="col-6 kepek rounded"><a href="https://open.spotify.com/user/y9elxiw7uvqaofdsy1rv4r962"><img class="img-fluid" src="img/zsolt/spotify.png" alt="Spotify" title="Spotify"><br><p class="elerhetosegek">Zsolt</p></a></div>
         </div>
     </div>
-        <p><a href="index.html" >Vissza</a></p>
+        <p><a href="index.html">Vissza</a> <a href="./balazs.html">Balázs</a> <a href="./david.html">Dávid</a></p>
 </body>
 </html>
