balazs rész kész

--- a/balazs.html
+++ b/balazs.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="balazs.css">
     <title>Bemutatkozó oldal - Zick Balázs</title>
 </head>
-<body>
+<body class="bg-dark">
 <div class="container">
     <div class="row">
         <h1>Zick Balázs</h1>
@@ -19,9 +19,9 @@
         <h3>Elérhetőségek</h3>
     </div>
     <div class="row">
-        <div class="col-4"><a href="" target="_blank"><img src="img/balazs/discord.png" alt="" id="kepek" class="img-fluid"></a></div>
-        <div class="col-4"><a href="https://open.spotify.com/user/o5h49xxl76sel74a5rw8s4sgo" target="_blank"><img src="img/balazs/spotify.png" alt="" id="kepek" class="img-fluid"></a></div>
-        <div class="col-4"><a href="https://steamcommunity.com/id/Zickyboii" target="_blank"><img src="img/balazs/steam.png" alt="" id="kepek" class="img-fluid"></a></div>
+        <div class="col-4"><p><a href="" target="_blank"><img src="img/balazs/discord.png" alt="" id="kepek" class="img-fluid"></a></p></div>
+        <div class="col-4"><p><a href="https://open.spotify.com/user/o5h49xxl76sel74a5rw8s4sgo" target="_blank"><img src="img/balazs/spotify.png" alt="" id="kepek" class="img-fluid"></a></p></div>
+        <div class="col-4"><p><a href="https://steamcommunity.com/id/Zickyboii" target="_blank"><img src="img/balazs/steam.png" alt="" id="kepek" class="img-fluid"></a></p></div>
     </div>
 </div>    
 <p class="text-center" id="vissza"><a href="index.html" class="text-center" >Vissza az indexre</a></p>
