--- a/balazs.html
+++ b/balazs.html
@@ -25,5 +25,7 @@
     </div>
 </div>    
 <p class="text-center" id="vissza"><a href="index.html" class="text-center" >Vissza az indexre</a></p>
+<p class="text-center" id="vissza"><a href="david.html" class="text-center" >Dávid oldala</a></p>
+<p class="text-center" id="vissza"><a href="zsolt.html" class="text-center" >Zsolt oldala</a></p>
 </body>
 </html>
