--- a/zsolt.html
+++ b/zsolt.html
@@ -19,7 +19,7 @@
 
     <div class="container">
         <div class="row mx-auto">
-            <div class="col-6 kepek rounded"><a href="https://github.com/GinalZsolt"><img class="img-fluid" src="img/zsolt/github.png" alt="Github" title="Github"><br><p class="elerhetosegek">GinalZsolt</p></a></div>
+            <div class="col-6 kepek rounded"><a href="https://github.com/GinalZsolt"><img class="img-fluid" src="img/zsolt/gitub.png" alt="Github" title="Github"><br><p class="elerhetosegek">GinalZsolt</p></a></div>
             <div class="col-6 kepek rounded"><a href="https://reddit.com/u/GiZsolt"><img class="img-fluid" src="img/zsolt/reddit.jpg" alt="Reddit" title="Reddit"><br><p class="elerhetosegek">GiZsolt</p></a></div>
         </div>
         <div class="row mx-auto">
@@ -30,6 +30,3 @@
         <p><a href="index.html">Vissza</a> <a href="./balazs.html">Balázs</a> <a href="./david.html">Dávid</a></p>
 </body>
 </html>
-<!--
-    
--->
