--- a/zsolt.html
+++ b/zsolt.html
@@ -27,6 +27,17 @@
             <div class="col-6 kepek rounded"><a href="https://open.spotify.com/user/y9elxiw7uvqaofdsy1rv4r962"><img class="img-fluid" src="img/zsolt/spotify.png" alt="Spotify" title="Spotify"><br><p class="elerhetosegek">Zsolt</p></a></div>
         </div>
     </div>
-        <p><a href="index.html" target="_blank">Vissza</a> <a href="./balazs.html">Balázs</a> <a href="./david.html">Dávid</a></p>
+    <div>
+        <ul>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem perferendis autem totam, consectetur possimus nam sint veritatis architecto dolorem aut nulla magnam quas sequi ad amet quisquam eos ullam aliquam? </li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore maiores, eligendi id excepturi quia atque fugit reprehenderit amet voluptatum, rerum omnis magni sequi eveniet voluptate et hic porro nulla delectus! </li>
+            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque explicabo placeat similique magnam neque veritatis voluptatem quod quo reiciendis at possimus, modi tenetur? Quas velit, doloribus vel totam cum explicabo. </li>
+            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque explicabo placeat similique magnam neque veritatis voluptatem quod quo reiciendis at possimus, modi tenetur? Quas velit, doloribus vel totam cum explicabo. </li>
+            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque explicabo placeat similique magnam neque veritatis voluptatem quod quo reiciendis at possimus, modi tenetur? Quas velit, doloribus vel totam cum explicabo. </li>
+        </ul>
+        
+    </div>
+    
+    <p><a href="index.html" target="_blank">Vissza</a> <a href="./balazs.html">Balázs</a> <a href="./david.html">Dávid</a></p>
 </body>
 </html>
