--- a/balazs.html
+++ b/balazs.html
@@ -4,22 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <script src="balazs.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="balazs.css">
     <title>Bemutatkozó oldal - Zick Balázs</title>
 </head>
 <body class="bg-dark">
-<div class="container">
+    <div class="container-fluid">
+        <nav class="navbar navbar-fixed-top navbar-expand-lg navbar-light bg-light">
+          <a class="navbar-brand" href="#">A csapat</a>
+          <ul class="navbar-nav">
+              <li class="nav-item"><a href="index.html" class="nav-link">Index</a></li>
+              <li class="nav-item"><a href="zsolt.html" class="nav-link">Ginál Zsolt</a></li>
+              <li class="nav-item"><a href="david.html" class="nav-link">Kocsis Dávid</a></li>
+          </ul>
+        </nav>
+      </div>
+    <div class="container">
     <div class="row">
         <h1>Zick Balázs</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quas sequi voluptatibus cum ipsum nihil asperiores tempore, error esse minus placeat consequuntur dolorum eum vitae voluptatem ratione harum corporis? Quo!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quas sequi voluptatibus cum ipsum nihil asperiores tempore, error esse minus placeat consequuntur dolorum eum vitae voluptatem ratione harum corporis? Quo!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit tempora quod libero commodi, impedit consectetur nulla voluptatem, adipisci repellat, in est illum consequuntur! Animi tempora aperiam asperiores sed voluptate eaque.
+        Inventore, itaque? Veniam cum consequuntur nulla excepturi. Id, minima accusantium. Temporibus saepe obcaecati culpa, assumenda maiores nisi rem quo dicta, quas perferendis consectetur error dolore neque quasi labore vitae odio!
+        Veniam, aperiam ducimus! Laudantium ex consectetur nemo repudiandae, ullam possimus facere incidunt non ducimus debitis, quo atque porro quos minus quis numquam ut dignissimos voluptate. Eveniet ducimus soluta sit alias!
+        Itaque sint illo ut quis provident praesentium nemo fugiat sit at. Voluptatum voluptatem numquam ullam fugit hic eius nobis iure, sit ipsam. Eum dolor consequuntur molestias vel quam, commodi magnam?
+        Quidem laboriosam earum excepturi! Quod deleniti at consequuntur temporibus facilis! Cumque, fugit. Officia rem incidunt repudiandae facere facilis porro dignissimos harum sunt provident? Odio quidem animi excepturi. Perspiciatis, eaque incidunt.
+        Officia, id autem sequi eum ratione delectus deserunt aperiam tenetur laboriosam doloribus magni beatae quae culpa rem eaque repellat totam obcaecati minus eveniet voluptate asperiores vero soluta. Obcaecati, exercitationem deserunt.</p>
     </div>
     <div class="row">
         <h3>Elérhetőségek</h3>
     </div>
-    <div class="row">
-        <div class="col-4"><p><a href="" target="_blank"><img src="img/balazs/discord.png" alt="" id="kepek" class="img-fluid"></a></p></div>
+    <div class="row mx-auto my-auto paddolj bg-secondary w-75">
+        <div class="col-4"><p><a href="" onclick="func()" target="_blank"><img src="img/balazs/discord.png" alt="" id="kepek" class="img-fluid"></a></p></div>
         <div class="col-4"><p><a href="https://open.spotify.com/user/o5h49xxl76sel74a5rw8s4sgo" target="_blank"><img src="img/balazs/spotify.png" alt="" id="kepek" class="img-fluid"></a></p></div>
         <div class="col-4"><p><a href="https://steamcommunity.com/id/Zickyboii" target="_blank"><img src="img/balazs/steam.png" alt="" id="kepek" class="img-fluid"></a></p></div>
     </div>
