--- a/balazs.html
+++ b/balazs.html
@@ -17,6 +17,7 @@
           <a class="navbar-brand" href="#">A csapat</a>
           <ul class="navbar-nav">
               <li class="nav-item"><a href="index.html" class="nav-link">Index</a></li>
+              <li class="nav-item active"><a href="#" class="nav-link">Zick Balázs <span>(jelenlegi)</span></a></li>
               <li class="nav-item"><a href="zsolt.html" class="nav-link">Ginál Zsolt</a></li>
               <li class="nav-item"><a href="david.html" class="nav-link">Kocsis Dávid</a></li>
           </ul>
@@ -36,14 +37,11 @@
     <div class="row">
         <h3>Elérhetőségek</h3>
     </div>
-    <div class="row mx-auto my-auto paddolj bg-secondary w-75">
+    <div class="row mx-auto my-auto paddolj bg-secondary w-50">
         <div class="col-4"><p><a href="" onclick="func()" target="_blank"><img src="img/balazs/discord.png" alt="" id="kepek" class="img-fluid"></a></p></div>
         <div class="col-4"><p><a href="https://open.spotify.com/user/o5h49xxl76sel74a5rw8s4sgo" target="_blank"><img src="img/balazs/spotify.png" alt="" id="kepek" class="img-fluid"></a></p></div>
         <div class="col-4"><p><a href="https://steamcommunity.com/id/Zickyboii" target="_blank"><img src="img/balazs/steam.png" alt="" id="kepek" class="img-fluid"></a></p></div>
     </div>
 </div>    
-<p class="text-center" id="vissza"><a href="index.html" class="text-center" >Vissza az indexre</a></p>
-<p class="text-center" id="vissza"><a href="david.html" class="text-center" >Dávid oldala</a></p>
-<p class="text-center" id="vissza"><a href="zsolt.html" class="text-center" >Zsolt oldala</a></p>
 </body>
 </html>
