--- a/balazs.html
+++ b/balazs.html
@@ -41,7 +41,11 @@
         <div class="col-4"><p><a href="" onclick="func()" target="_blank"><img src="img/balazs/discord.png" alt="" id="kepek" class="img-fluid"></a></p></div>
         <div class="col-4"><p><a href="https://open.spotify.com/user/o5h49xxl76sel74a5rw8s4sgo" target="_blank"><img src="img/balazs/spotify.png" alt="" id="kepek" class="img-fluid"></a></p></div>
         <div class="col-4"><p><a href="https://steamcommunity.com/id/Zickyboii" target="_blank"><img src="img/balazs/steam.png" alt="" id="kepek" class="img-fluid"></a></p></div>
+    </div>    
+    <div class="container fixed-bottom">
+        <footer>
+            <p>&copy; Zick Balázs 2021</p>
+        </footer>
     </div>
-</div>    
 </body>
 </html>
