--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <title>Bemutatkozó oldal</title>
 </head>
 <body>
+    <div class="container-fluid">
+        <nav class="navbar navbar-fixed-top navbar-expand-lg navbar-light bg-light">
+          <a class="navbar-brand" href="#">A csapat</a>
+          <ul class="navbar-nav">
+              <li class="nav-item"><a href="#" class="nav-link">Index <span>(jelenlegi)</span></a></li>
+              <li class="nav-item active"><a href="balazs.html" class="nav-link">Zick Balázs</a></li>
+              <li class="nav-item"><a href="zsolt.html" class="nav-link">Ginál Zsolt</a></li>
+              <li class="nav-item"><a href="david.html" class="nav-link">Kocsis Dávid</a></li>
+          </ul>
+        </nav>
+      </div>
     <div class="container">
         <h1 class="mx-auto">A csapat</h1>
         <div class="row mx-auto">
